Better JavaScript initialization

--- a/app/Resources/public/less/etraxis-basic.less
+++ b/app/Resources/public/less/etraxis-basic.less
@@ -40,6 +40,10 @@ nav {
             white-space: nowrap;
         }
 
+        a {
+            cursor: pointer;
+        }
+
         .fern {
             float: right;
             padding-right: 0;
