--- a/app/Resources/views/admin/users/index.html.twig
+++ b/app/Resources/views/admin/users/index.html.twig
@@ -4,12 +4,12 @@
 
     <div class="grid-row">
         <div class="grid-100">
-            <button type="button" id="btn-create">{{ 'button.create'|trans }}</button>
+            <button type="button" onclick="UsersApp.create()">{{ 'button.create'|trans }}</button>
             <span class="buttonset">
-                <button type="button" id="btn-disable" disabled="disabled">{{ 'button.disable'|trans }}</button>
-                <button type="button" id="btn-enable" disabled="disabled">{{ 'button.enable'|trans }}</button>
+                <button type="button" id="btn-disable" onclick="UsersApp.disable()" disabled="disabled">{{ 'button.disable'|trans }}</button>
+                <button type="button" id="btn-enable" onclick="UsersApp.enable()" disabled="disabled">{{ 'button.enable'|trans }}</button>
             </span>
-            <button type="button" id="btn-export">{{ 'button.export'|trans }}</button>
+            <button type="button" onclick="UsersApp.export()">{{ 'button.export'|trans }}</button>
         </div>
     </div>
 
@@ -54,86 +54,6 @@
 
 {% block scripts %}
 
-    <script>
-
-        $(function() {
-
-            // Users list.
-            var $table = $('#users').table({
-                checkboxes: 'users'
-            });
-
-            // Some buttons are disabled if no checkbox is ticked.
-            $table.on('checkbox.click', function(e, data) {
-                $('#btn-disable').disable(data.count == 0);
-                $('#btn-enable').disable(data.count == 0);
-            });
-
-            // Click on a user in the list.
-            $table.on('click', 'tbody tr', function() {
-                window.location.assign('{{ path('admin_users') }}' + $(this).data('id'));
-            });
-
-            // "Create" button.
-            $('#btn-create').click(function() {
-                eTraxis.modal({
-                    url: '{{ path('admin_new_user') }}',
-                    title: '{{ 'user.new'|trans }}',
-                    success: function() {
-                        $table.api().draw(false);
-                        return true;
-                    }
-                });
-            });
-
-            // "Disable" button.
-            $('#btn-disable').click(function() {
-
-                var ids = [];
-
-                $('input[name="users"]:checked', $table).each(function() {
-                    if ($(this).val() != {{ app.user.id }}) {
-                        ids.push($(this).val());
-                    }
-                });
-
-                if (ids.length) {
-                    $.post('{{ path('admin_disable_user') }}', { ids: ids }, function() {
-                        $table.api().draw(false);
-                    });
-                }
-            });
-
-            // "Enable" button.
-            $('#btn-enable').click(function() {
-
-                var ids = [];
-
-                $('input[name="users"]:checked', $table).each(function() {
-                    ids.push($(this).val());
-                });
-
-                if (ids.length) {
-                    $.post('{{ path('admin_enable_user') }}', { ids: ids }, function() {
-                        $table.api().draw(false);
-                    });
-                }
-            });
-
-            // "Export" button.
-            $('#btn-export').click(function() {
-                eTraxis.modal({
-                    url: '{{ path('dlg_export') }}',
-                    title: '{{ 'button.export'|trans }}',
-                    success: function() {
-                        var params = $('form').serialize() + '&' + $.param($table.api().ajax.params());
-                        window.location.assign('{{ path('admin_users_csv') }}?' + params);
-                        return true;
-                    }
-                });
-            });
-        });
-
-    </script>
+    <script src="{{ asset('js/admin/users.js') }}"></script>
 
 {% endblock %}
