--- a/app/Resources/views/admin/users/tab_details.html.twig
+++ b/app/Resources/views/admin/users/tab_details.html.twig
@@ -2,20 +2,20 @@
 
 <div class="grid-row">
     <div class="grid-100">
-        <button type="button" id="btn-back">{{ 'button.back'|trans }}</button>
-        <button type="button" id="btn-edit">{{ 'button.edit'|trans }}</button>
+        <button type="button" onclick="UserApp.back()">{{ 'button.back'|trans }}</button>
+        <button type="button" onclick="UserApp.edit()">{{ 'button.edit'|trans }}</button>
         {% if can.delete %}
-            <button type="button" id="btn-delete">{{ 'button.delete'|trans }}</button>
+            <button type="button" onclick="UserApp.delete()">{{ 'button.delete'|trans }}</button>
         {% endif %}
         <span class="buttonset">
             {% if can.disable %}
-                <button type="button" id="btn-disable">{{ 'button.disable'|trans }}</button>
+                <button type="button" onclick="UserApp.disable()">{{ 'button.disable'|trans }}</button>
             {% endif %}
             {% if can.enable %}
-                <button type="button" id="btn-enable">{{ 'button.enable'|trans }}</button>
+                <button type="button" onclick="UserApp.enable()">{{ 'button.enable'|trans }}</button>
             {% endif %}
             {% if can.unlock %}
-                <button type="button" id="btn-unlock">{{ 'button.unlock'|trans }}</button>
+                <button type="button" onclick="UserApp.unlock()">{{ 'button.unlock'|trans }}</button>
             {% endif %}
         </span>
     </div>
@@ -23,7 +23,7 @@
 
 <div class="grid-row">
     <div class="grid-100">
-        <fieldset>
+        <fieldset id="user-details" data-name="{{ user.fullname }}">
             {{ macro.row('user.username'|trans, user.username) }}
             {{ macro.row('user.fullname'|trans, user.fullname) }}
             {{ macro.row('user.email'|trans, user.email) }}
@@ -38,76 +38,3 @@
         </fieldset>
     </div>
 </div>
-
-<script>
-
-    $(function() {
-
-        var reloadTab = function() {
-            var $tabs = $('#tabs-user');
-            var current = $tabs.tabs('option', 'active');
-            $tabs.tabs('load', current);
-        };
-
-        // Update tab title - user name could be changed.
-        var $tabs = $('#tabs-user');
-        $('ul.ui-tabs-nav li[tabindex=0] a', $tabs).text('{{ user.fullname }}');
-
-        // "Back" button.
-        $('#btn-back').click(function() {
-            window.location.assign('{{ path('admin_users') }}');
-        });
-
-        // "Edit" button.
-        $('#btn-edit').click(function() {
-            {% if user.id == app.user.id %}
-            $('#form_admin').disable(true);
-            $('#form_disabled').disable(true);
-            {% endif %}
-
-            eTraxis.modal({
-                url: '{{ path('admin_edit_user', {'id': user.id}) }}',
-                title: '{{ user.fullname }}',
-                success: function() {
-                    {% if user.id == app.user.id %}
-                    window.location.assign('{{ path('admin_view_user', {'id': user.id}) }}');
-                    {% else %}
-                    reloadTab();
-                    {% endif %}
-                    return true;
-                }
-            });
-        });
-
-        // "Delete" button.
-        $('#btn-delete').click(function() {
-            eTraxis.confirm('{{ 'button.delete'|trans }}', '{{ 'user.confirm.delete'|trans }}', function() {
-                $.post('{{ path('admin_delete_user', {'id': user.id}) }}', function() {
-                    window.location.assign('{{ path('admin_users') }}');
-                });
-            });
-        });
-
-        // "Disable" button.
-        $('#btn-disable').click(function() {
-            $.post('{{ path('admin_disable_user') }}', { ids: [{{ user.id }}] }, function() {
-                reloadTab();
-            });
-        });
-
-        // "Enable" button.
-        $('#btn-enable').click(function() {
-            $.post('{{ path('admin_enable_user') }}', { ids: [{{ user.id }}] }, function() {
-                reloadTab();
-            });
-        });
-
-        // "Unlock" button.
-        $('#btn-unlock').click(function() {
-            $.post('{{ path('admin_unlock_user', {'id': user.id}) }}', function() {
-                reloadTab();
-            });
-        });
-    });
-
-</script>
