--- a/app/Resources/views/admin/users/view.html.twig
+++ b/app/Resources/views/admin/users/view.html.twig
@@ -4,7 +4,7 @@
 
     <div class="grid-row">
         <div class="grid-100">
-            <div class="tabs" id="tabs-user" data-tab="{{ tab }}" data-user-id="{{ user.id }}">
+            <div class="tabs" id="tabs-user" data-tab="{{ tab }}">
                 <ul>
                     <li><a href="{{ path('admin_tab_user_details', {'id': user.id}) }}">{{ user.fullname }}</a></li>
                     <li><a href="{{ path('admin_tab_user_groups', {'id': user.id}) }}">{{ 'groups'|trans }}</a></li>
