Mobile browser tab's color

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 
+    {% include 'theme-color.html.twig' with {'theme': (app.user ? app.user.theme : theme)} %}
+
     <title>{{ title | default('eTraxis') }}</title>
 
     {% if app.environment == 'dev' %}
