--- a/app/Resources/views/admin/groups/tab_details.html.twig
+++ b/app/Resources/views/admin/groups/tab_details.html.twig
@@ -2,8 +2,8 @@
 
 <div class="grid-row">
     <div class="grid-100">
-        <button type="button" id="btn-edit">{{ 'button.edit'|trans }}</button>
-        <button type="button" id="btn-delete">{{ 'button.delete'|trans }}</button>
+        <button type="button" onclick="GroupsApp.edit({{ group.id }})">{{ 'button.edit'|trans }}</button>
+        <button type="button" onclick="GroupsApp.delete({{ group.id }})">{{ 'button.delete'|trans }}</button>
     </div>
 </div>
 
@@ -21,38 +21,3 @@
         </fieldset>
     </div>
 </div>
-
-<script>
-
-    $(function() {
-
-        var reloadTab = function() {
-            var $tabs = $('#tabs-group');
-            var current = $tabs.tabs('option', 'active');
-            $tabs.tabs('load', current);
-        };
-
-        // "Edit" button.
-        $('#btn-edit').click(function() {
-            eTraxis.modal({
-                url: '{{ path('admin_edit_group', {'id': group.id}) }}',
-                title: '{{ group.name }}',
-                success: function() {
-                    $(document).trigger('admin.group.edited', {{ group.id }});
-                    reloadTab();
-                    return true;
-                }
-            });
-        });
-
-        // "Delete" button.
-        $('#btn-delete').click(function() {
-            eTraxis.confirm('{{ 'button.delete'|trans }}', '{{ 'group.confirm.delete'|trans }}', function() {
-                $.post('{{ path('admin_delete_group', {'id': group.id}) }}', function() {
-                    $(document).trigger('admin.group.deleted', {{ group.id }});
-                });
-            });
-        });
-    });
-
-</script>
