--- a/app/Resources/views/admin/templates/tab_permissions.html.twig
+++ b/app/Resources/views/admin/templates/tab_permissions.html.twig
@@ -3,7 +3,7 @@
     <div class="grid-50">
         <fieldset>
             <legend>{{ 'groups'|trans }}</legend>
-            <select id="group" size="20" class="grid-100 mobile-grid-100">
+            <select id="group" onchange="TemplatesApp.loadPermissions({{ template.id }})" size="20" title="{{ 'groups'|trans }}" class="grid-100 mobile-grid-100">
                 <option value="{{ role.author }}" selected>{{ 'role.author'|trans }} ({{ 'role'|trans|lower }})</option>
                 <option value="{{ role.responsible }}">{{ 'role.responsible'|trans }} ({{ 'role'|trans|lower }})</option>
                 <option value="{{ role.registered }}">{{ 'role.registered'|trans }} ({{ 'role'|trans|lower }})</option>
@@ -34,49 +34,9 @@
             {% endfor %}
         </fieldset>
         <div class="grid-row">
-            <button type="button" id="btn-save">{{ 'button.save'|trans }}</button>
-            <button type="button" id="btn-select">{{ 'button.select_all'|trans }}</button>
+            <button type="button" onclick="TemplatesApp.savePermissions({{ template.id }})">{{ 'button.save'|trans }}</button>
+            <button type="button" onclick="TemplatesApp.selectAllPermissions()">{{ 'button.select_all'|trans }}</button>
         </div>
     </div>
 
 </div>
-
-<script>
-
-    $(function() {
-
-        // "Groups" list.
-        $('#group').change(function() {
-            var group = $(this).val();
-
-            $.get('{{ path('admin_load_template_permissions', {'id': template.id}) }}/' + group, function(data) {
-                $('#template_permission_view_records, #template_permission_create_records').disable(
-                    group == {{ role.author }} || group == {{ role.responsible }}
-                );
-                {% for key, value in permissions %}
-                $('#{{ key|replace('.', '_') }}').prop('checked', (data & {{ value }}) != 0);
-                {% endfor %}
-            });
-        }).change();
-
-        // "Save" button.
-        $('#btn-save').click(function() {
-            var group = $('#group').val();
-            var permissions = 0;
-
-            $('input[type="checkbox"].permissions:checked').each(function() {
-                permissions |= $(this).val();
-            });
-
-            $.post('{{ path('admin_save_template_permissions', {'id': template.id}) }}/' + group, { permissions }, function() {
-                eTraxis.alert('{{ 'permissions'|trans }}', '{{ 'changes_saved'|trans }}');
-            });
-        });
-
-        // "Select all" button.
-        $('#btn-select').click(function() {
-            $('input[type="checkbox"].permissions:not(:disabled)').prop('checked', true);
-        });
-    });
-
-</script>
