Field details (common)

--- a/app/Resources/views/admin/projects/index.html.twig
+++ b/app/Resources/views/admin/projects/index.html.twig
@@ -27,6 +27,12 @@
                 <div>{{ 'states'|trans }}</div>
             </div>
         </div>
+        <div class="grid-row mobile-grid-row panel hidden" id="fields">
+            <div class="panel-heading">
+                <span class="ui-icon ui-icon-circle-plus" onclick="FieldsApp.create()" title="{{ 'button.create'|trans }}"></span>
+                <div>{{ 'fields'|trans }}</div>
+            </div>
+        </div>
     </div>
 
     <div class="grid-70 mobile-grid-100 grid-row mobile-grid-row">
