--- a/app/Resources/views/macro.html.twig
+++ b/app/Resources/views/macro.html.twig
@@ -2,7 +2,7 @@
     <div class="grid-container grid-parent grid-row">
         <div class="grid-25"><p class="caption">{{ label }}:</p></div>
         {% if value %}
-        <div class="grid-75"><p>{{ value }}</p></div>
+        <div class="grid-75"><p>{{ value|nl2br }}</p></div>
         {% else %}
         <div class="grid-75"><p>&mdash;</p></div>
         {% endif %}
