Field details (type specific)

--- a/app/Resources/views/admin/fields/tab_details.html.twig
+++ b/app/Resources/views/admin/fields/tab_details.html.twig
@@ -13,8 +13,15 @@
         <fieldset>
             {{ macro.row('field.name'|trans, field.name) }}
             {{ macro.row('field.type'|trans, types[field.type]|trans|lower) }}
+
+            {% block details %}{% endblock %}
+
             {{ macro.row('description'|trans, field.description) }}
-            {{ macro.row('field.required'|trans, field.isRequired ? 'button.yes'|trans|lower : 'button.no'|trans|lower) }}
+
+            {% if (field.type != constant('eTraxis\\Entity\\Field::TYPE_CHECKBOX')) %}
+                {{ macro.row('field.required'|trans, field.isRequired ? 'button.yes'|trans|lower : 'button.no'|trans|lower) }}
+            {% endif %}
+
             {{ macro.row('field.guest_access'|trans, field.hasGuestAccess ? 'button.yes'|trans|lower : 'button.no'|trans|lower) }}
             {{ macro.row('field.show_in_emails'|trans, field.showInEmails ? 'button.yes'|trans|lower : 'button.no'|trans|lower) }}
         </fieldset>
