--- a/app/Resources/views/admin/fields/tab_details_decimal.html.twig
+++ b/app/Resources/views/admin/fields/tab_details_decimal.html.twig
@@ -1,4 +1,9 @@
 {% extends 'admin/fields/tab_details.html.twig' %}
 
 {% block details %}
+
+    {{ macro.row('field.min_value'|trans, field.asDecimal.minValue) }}
+    {{ macro.row('field.max_value'|trans, field.asDecimal.maxValue) }}
+    {{ macro.row('field.default_value'|trans, field.asDecimal.defaultValue) }}
+
 {% endblock %}
