--- a/app/Resources/views/admin/fields/tab_details_checkbox.html.twig
+++ b/app/Resources/views/admin/fields/tab_details_checkbox.html.twig
@@ -1,4 +1,7 @@
 {% extends 'admin/fields/tab_details.html.twig' %}
 
 {% block details %}
+
+    {{ macro.row('field.default_value'|trans, field.asCheckbox.defaultValue ? 'button.yes'|trans|lower : 'button.no'|trans|lower) }}
+
 {% endblock %}
