--- a/app/Resources/views/macro.html.twig
+++ b/app/Resources/views/macro.html.twig
@@ -1,10 +1,10 @@
 {% macro row(label, value) %}
     <div class="grid-container grid-parent grid-row">
         <div class="grid-25"><p class="caption">{{ label }}:</p></div>
-        {% if value %}
-        <div class="grid-75"><p>{{ value|nl2br }}</p></div>
-        {% else %}
+        {% if value is null %}
         <div class="grid-75"><p>&mdash;</p></div>
+        {% else %}
+        <div class="grid-75"><p>{{ value|nl2br }}</p></div>
         {% endif %}
     </div>
 {% endmacro %}
