--- a/app/Resources/public/less/etraxis-controls.less
+++ b/app/Resources/public/less/etraxis-controls.less
@@ -89,6 +89,7 @@ input[type="password"] {
 
 input[type="checkbox"],
 input[type="radio"] {
+    margin-right: 5px;
     vertical-align: middle;
 }
 
